--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <!-- changed the color in the brand name to make it more noticeably contrasted for visually impaired visitors -->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -27,21 +28,21 @@
     <div class="hero"></div>
     <!-- is this a section or possibly an artical? keep the div contianers? -->
     <main class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="service-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A table with many office objects and a notebook that details steps for search engine optimzation." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="service-content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A laptop display with a project that emphasizes repuation." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="service-content">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A table with spread out social media graphics, icons, and actions made of paper." />
             <h2>Social Media Marketing</h2>
             <p>
@@ -50,21 +51,21 @@
         </section>
     </main>
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="An illustrated gear that is generating money."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="An illustrated individual with a light-bulb head, with increased awareness." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="An illustrated gear surrounded by dollar signs." />
             <p>
