final commit before submit 8/17

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Title and head -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Services</title>
 </head>
 
+<!-- Top of page navigation -->
 <body>
     <header>
         <!-- changed the color in the brand name to make it more noticeably contrasted for visually impaired visitors -->
@@ -25,8 +27,11 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Hero  -->
     <div class="hero"></div>
-    <!-- is this a section or possibly an artical? keep the div contianers? -->
+
+    <!-- Main content -->
     <main class="content">
         <section id="search-engine-optimization" class="service-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A table with many office objects and a notebook that details steps for search engine optimzation." />
@@ -50,6 +55,8 @@
             </p>
         </section>
     </main>
+
+    <!-- Side content -->
     <aside class="benefits">
         <section class="benefit">
             <h3>Lead Generation</h3>
@@ -73,6 +80,8 @@
             </p>
         </section>
     </aside>
+
+    <!-- Bottom of page -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
@@ -80,5 +89,4 @@
         </p>
     </footer>
 </body>
-
 </html>
